# theater

./: .gitignore  README.md  main.py  package-lock.json  pyproject.toml  ws_hadi.py  ws_polar.py  ws_teren.py  ws_zahradbami.py
TODO/: ws_buran.py  ws_radost.py
Webscraping/: output.py  ws_bolek.py  ws_depog.py  ws_radost.py  ws_zahradbami.py
Webscraping/TODO/: ws_feste.py
app/: app.json  package-lock.json
common/: output.py  ws_artbar.py  ws_buran.py  ws_depog.py  ws_husa.py  ws_ndb.py  ws_polar.py
server/: Pipfile  README.md  app.py  main.py  output.py  pyproject.toml  test.py  theater_db  ws_artbar.py  ws_depog.py  ws_hadi.py  ws_husa.py  ws_marta.py  ws_mdb.py  ws_ndb.py
server/TODO/: ws_feste.py
server/common/: output.py  ws_bolek.py  ws_depog.py  ws_hadi.py  ws_marta.py  ws_mdb.py  ws_ndb.py  ws_polar.py  ws_teren.py  ws_zahradbami.py
server/common/TODO/: ws_radost.py  ws_zahradbami.py
